--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
   "dependencies": {
-    "body-parser": "^1.20.2",
-    "canvas": "^2.11.2",
-    "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "canvas": "^2.11.2"
   },
   "name": "@strafechat/captcha",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A very basic captcha provider for Strafe",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "ShadowLp174",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3"
+  }
 }
