--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "canvas": "^2.11.2"
   },
   "name": "@strafechat/captcha",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A very basic captcha provider for Strafe",
   "main": "index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "author": "ShadowLp174",
   "license": "MIT",
   "devDependencies": {
+    "@strafechat/captcha": "^1.0.1",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3"
