--- a/package.json
+++ b/package.json
@@ -3,18 +3,25 @@
     "canvas": "^2.11.2"
   },
   "name": "@strafechat/captcha",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A very basic captcha provider for Strafe",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "files": [
+    "./src/index.js",
+    "./src/assets/strafechat.png",
+    "./dist/**/*"
+  ],
   "author": "ShadowLp174",
   "license": "MIT",
   "devDependencies": {
     "@strafechat/captcha": "^1.0.1",
+    "@types/node": "^20.10.6",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "express-session": "^1.17.3"
+    "express-session": "^1.17.3",
+    "typescript": "^5.3.3"
   }
 }
