--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
     "canvas": "^2.11.2"
   },
   "name": "@strafechat/captcha",
-  "version": "1.0.4",
+  "version": "1.0.41",
   "description": "A very basic captcha provider for Strafe",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "types": "./dist/index.d.ts",
   "files": [
     "./src/index.js",
     "./src/assets/strafechat.png",
